--- a/src/p2-homeworks/h12/HW12.module.css
+++ b/src/p2-homeworks/h12/HW12.module.css
@@ -21,3 +21,19 @@
 .some-text {
     color: darkslateblue;
 }
+
+.blue {
+    background: blue;
+}
+
+.cornflowerblue-text {
+    color: cornflowerblue;
+}
+
+.white {
+    background: white;
+}
+
+.dodgerblue-text {
+    color: dodgerblue;
+}
